--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Task #1</string>
     <string name="action_settings">Add</string>
+    <string name="edit_option">Edit</string>
+    <string name="remove_option">Remove</string>
 </resources>
